--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://artebleker.github.io/resin-bleker-final",
+  "homepage": "https://artebleker.github.io/",
   "name": "resin-bleker-final",
   "version": "0.1.0",
   "private": true,
